--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
     "@mui/styled-engine-sc": "^7.1.0",
+    "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-input-mask": "^2.0.4",
-    "react-router-dom": "^7.6.1",
+    "react-jwt": "^1.3.0",
+    "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
