--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-input-mask": "^2.0.4",
     "react-jwt": "^1.3.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
